deliveryhelm/templates/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  labels:
    app: delivery
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "delivery-mvp.test"
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: delivery
                port:
                  number: 80
